--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,7 +66,7 @@ header {
     left: 30vw;
     color: white;
 }
-camera {
+#camera {
     padding: 0;
     position: fixed;
     bottom: 0;
@@ -76,7 +76,7 @@ camera {
     overflow: hidden;
     background-color: #333;
     /* You'll need to mess with this a bit to get your camera to work. Replace the url with a live-updating image feed from your camera. Using other camera streaming systems will require some tweaking. */
-    background-image: url('http://roborio-4027-frc.local:1181/?action=stream');
+    background-image: url('http://roborio-341-frc.local:1181/?action=stream');
 }
 article {
     top: 0;
@@ -122,6 +122,11 @@ text {
     -webkit-transform-origin: right;
     -ms-transform-origin: right;
     transform-origin: right;
+}
+#arm-forearm {
+    -webkit-transform-origin: left;
+    -ms-transform-origin: left;
+    transform-origin: left;
 }
 #team {
     font-size: 28px;
